--- a/home.html
+++ b/home.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Biblioteca de Linguagens</title>
 </head>
+
 <body>
-    <main class="main-content">
+    <header class="header">
+        <div class="header-left">
+            <h1 class="header-title">
+                Biblioteca de Linguagens
+            </h1>
+        </div>
         <nav class="navbar">
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="./html.html"><h2>HTML</h2>
-                        <p>HTML é uma linguagem de marcação utilizada na construção de páginas na Web.</p>
+                    <a href="./html.html">
+                        <p>HTML</p>
+                    </a>
+                </li>
+                <li class="menu-item"><a href="./css.html">
+                        <p>CSS</p>
                     </a></li>
-                <li class="menu-item"><a href="./css.html"><h2>CSS</h2>
-                <p>Cascading Style Sheets é um mecanismo para adicionar estilo a um documento web.</p></a></li>
-                <li class="menu-item"><a href="./javascript.html"><h2>JavaScript</h2>
-                <p>JavaScript é uma linguagem de programação interpretada estruturada.</p></a></li>
+                <li class="menu-item"><a href="./javascript.html">
+                        <p>JavaScript</p>
+                    </a></li>
             </ul>
         </nav>
+    </header>
+    <main class="main-content container">
+        <h1>Front End, a camada visual das aplicações web.</h1>
     </main>
 </body>
+
 </html>
