--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header">
         <div class="header-left">
             <h1 class="header-title">
-                <a href="./home.html">
+                <a href="./index.html">
                     Biblioteca de Linguagens
                 </a>
             </h1>
