--- a/index.html
+++ b/index.html
@@ -50,21 +50,47 @@
         </p>
     </div>
 
-    <ul class="main-menu">
-        <li class="main-menu-item">
-            <h2 class="main-menu-title">HTML</h2>
-            <p class="main-menu-descrip">HTML é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores. </p>
-        </li>
+    <div class="card-container">
+        <div class="card-text">
+            HTML é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores.
+        </div>
+        <a href="./html.html" target="_blank">
+        <div class="card">
+            <div class="card-wrapper">
+                <h2>HTML5</h2>
+                <p>Clique para Saber Mais...</p>
+            </div>
+        </div>
+        </a>
+    </div>
 
-        <li class="main-menu-item">
-            <h2 class="main-menu-title">CSS</h2>
-            <p class="main-menu-descrip">Cascading Style Sheets é um mecanismo para adicionar estilo a um documento web. O código CSS pode ser aplicado diretamente nas tags ou ficar contido dentro das tags. </p>
-        </li>
-        <li class="main-menu-item">
-            <h2 class="main-menu-title">JavaScript</h2>
-            <p class="main-menu-descrip">JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. O JavaScript é uma das três principais. </p>
-        </li>
-    </ul>
+    <div class="card-container">
+        <a href="./css.html" target="_blank">
+        <div class="card">
+            <div class="card-wrapper">
+                <h2>CSS3</h2>
+                <p>Clique para Saber Mais...</p>
+            </div>
+        </div>
+    </a>
+        <div class="card-text">
+            Cascading Style Sheets é um mecanismo para adicionar estilo a um documento web. O código CSS pode ser aplicado diretamente nas tags ou ficar contido dentro das tags.
+        </div>
+    </div>
+
+    <div class="card-container">
+        <div class="card-text">
+            JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. O JavaScript é uma das três principais.
+        </div>
+        <a href="./javascript.html" target="_blank">
+        <div class="card">
+            <div class="card-wrapper">
+                <h2>JavaScript</h2>
+                <p>Clique para Saber Mais...</p>
+            </div>
+        </div>
+    </a>
+    </div>
         </article>
     </main>
 </body>
