--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="./html.html" target="_blank">
         <div class="card">
             <div class="card-wrapper">
-                <h2>HTML5</h2>
+                <h2>HTML</h2>
                 <p>Clique para Saber Mais...</p>
             </div>
         </div>
@@ -68,7 +68,7 @@
         <a href="./css.html" target="_blank">
         <div class="card">
             <div class="card-wrapper">
-                <h2>CSS3</h2>
+                <h2>CSS</h2>
                 <p>Clique para Saber Mais...</p>
             </div>
         </div>
