--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </p>
     </div>
 
+    <div class="card-main">
     <div class="card-container">
         <div class="card-text">
             HTML é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores.
@@ -90,8 +91,7 @@
             </div>
         </div>
     </a>
-    </div>
-        </article>
+</div>
     </main>
 </body>
 
